log
Tue, May 13, 2025 12:52:25 PM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:65:25: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
                         add(list, new);
                         ^~~
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
3f0e54c
Tue, May 13, 2025 12:54:32 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
ff015f2
Tue, May 13, 2025 12:56:59 PM: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
80d58f9
Tue, May 13, 2025  1:00:27 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
1567b28
Tue, May 13, 2025  1:02:36 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
fd7c737
Tue, May 13, 2025  1:03:44 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:80:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
e23100c
Tue, May 13, 2025  1:06:24 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:81:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
6e1377a
Tue, May 13, 2025  1:06:41 PM: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:68:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
ddeea56
Tue, May 13, 2025  1:07:20 PM: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
6f93f33
Tue, May 13, 2025  1:08:09 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
918b2be
Tue, May 13, 2025  1:08:38 PM: 
 sudoku.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:77:16: error: implicit declaration of function 'create_list' [-Werror=implicit-function-declaration]
   List* list = create_list();
                ^~~~~~~~~~~
sudoku.c:77:16: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
sudoku.c:86:13: error: implicit declaration of function 'add' [-Werror=implicit-function-declaration]
             add(list, new);
             ^~~
cc1.exe: all warnings being treated as errors
8790612
Tue, May 13, 2025  1:09:23 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
22de156
Tue, May 13, 2025  1:10:05 PM: 
 sudoku.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
de17786
Tue, May 13, 2025  1:10:36 PM: 
 sudoku.c | 24 ------------------------
 1 file changed, 24 deletions(-)
 tests:  2|4
total_score: 15/70
69b830a
Tue, May 13, 2025  1:10:55 PM: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
Compilation failed
test.c: In function 'get_adj_nodes':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
eed39d8
Tue, May 13, 2025  1:11:28 PM: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
ee2b845
